#89 use jdk base64 codec